# agentic-llm-eval-suite

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: llm-eval-report.yml
datasets/: multi_turn.yaml  single_turn.yaml
llm_eval_suite/: __init__.py  cache.py  cli.py  config.py  dataset_loader.py  judge.py  models.py  providers.py  report.py  runner.py  scoring.py
scripts/: ci_benchmark.sh
tests/: conftest.py  test_cli.py  test_config.py  test_dataset_loader.py  test_external_repo_usage_contract.py  test_judge.py  test_providers.py  test_report.py  test_runner.py  test_runner_cache.py  test_runner_judge_integration.py  test_scoring.py  test_usage_mapping.py
